feat: added pyradiomic feature loading

--- a/workflow/notebooks/0n-feature-selection.ipynb
+++ b/workflow/notebooks/0n-feature-selection.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 37,
    "id": "f5763f29",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,9 @@
     "DATA_DIR_PATH = Path(\"../../data\")\n",
     "RAW_DATA_PATH = DATA_DIR_PATH / \"rawdata\" / DATASET_NAME\n",
     "PROC_DATA_PATH = DATA_DIR_PATH / \"procdata\" / DATASET_NAME\n",
-    "RESULTS_DATA_PATH = DATA_DIR_PATH / \"results\" / DATASET_NAME"
+    "RESULTS_DATA_PATH = DATA_DIR_PATH / \"results\" / DATASET_NAME\n",
+    "\n",
+    "pyradiomics_settings = \"pyradiomics_original_all_features\""
    ]
   },
   {
@@ -87,8 +89,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "88aa2514",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image_type = \"full_original\"\n",
+    "pyrad_features = loadFileToDataFrame((RESULTS_DATA_PATH / pyradiomics_settings / f\"{image_type}_features.csv\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6d04a116",
    "metadata": {},
    "outputs": [],
    "source": []
