feat: add lasso code from Kaitlyn

--- a/workflow/notebooks/0n-feature-selection.ipynb
+++ b/workflow/notebooks/0n-feature-selection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "id": "96dabc4b",
    "metadata": {},
    "outputs": [],
@@ -11,18 +11,19 @@
     "\n",
     "import pandas as pd\n",
     "from readii.io.loaders import loadImageDatasetConfig, loadFileToDataFrame\n",
-    "from pathlib import Path"
+    "from pathlib import Path\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "id": "f5763f29",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load in the configuration file\n",
-    "config = loadImageDatasetConfig(\"HEAD-NECK-RADIOMICS-HN1\", Path(\"../../config/datasets\"))\n",
+    "config = loadImageDatasetConfig(\"NSCLC-Radiomics\", Path(\"../../config/datasets\"))\n",
     "\n",
     "# Initialize dataset parameters\n",
     "CLINICAL_DATA_FILE = config[\"CLINICAL_FILE\"]\n",
@@ -41,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "id": "893efb13",
    "metadata": {},
    "outputs": [],
@@ -52,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 15,
    "id": "d47ef626",
    "metadata": {},
    "outputs": [],
@@ -62,29 +63,20 @@
     "\n",
     "# SampleID is local file name\n",
     "# PatientID is TCIA ID\n",
-    "\n",
-    "id_map = mit_index[[\"SampleID\", \"PatientID\"]].copy()"
+    "id_map = mit_index['SampleID']\n",
+    "id_map.index = mit_index[\"PatientID\"]\n",
+    "id_map.drop_duplicates(inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "71b40e61",
+   "execution_count": null,
+   "id": "10eebf2f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "82"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "len(id_map['PatientID'].unique())"
+    "# Map the SampleIDs to the clinical data and add as a column for intersection\n",
+    "clinical_data['SampleID'] = clinical_data['PatientID'].map(id_map)"
    ]
   },
   {
@@ -104,7 +96,35 @@
    "id": "6d04a116",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def calc_LASSO(X_train, event_status_train, a_lasso):\n",
+    "    \"\"\"\n",
+    "    Performs LASSO for feature selection\n",
+    "   \n",
+    "    Parameters\n",
+    "    -----------\n",
+    "    X_train: pd.DataFrame\n",
+    "        A dataframe containing only radiomic features\n",
+    "    event_status_train: pd.DataFrame\n",
+    "        A column containing the event status of patients\n",
+    "    a_lasso: float\n",
+    "        The regularization parameter alpha to be used when initializing the LASSO model\n",
+    "       \n",
+    "    Returns\n",
+    "    ----------\n",
+    "    lasso_passed: list\n",
+    "        All feature names with non zero coefficients\n",
+    "    \"\"\"\n",
+    " \n",
+    "    lasso = Lasso(a_lasso)\n",
+    "    lasso.fit(X_train, event_status_train)\n",
+    "    lasso_coef = np.abs(lasso.coef_)\n",
+    " \n",
+    "    all_rad_feats = X_train.columns.values.tolist()\n",
+    "    lasso_passed = np.array(all_rad_feats)[lasso_coef>0]\n",
+    " \n",
+    "    return(lasso_passed)"
+   ]
   }
  ],
  "metadata": {
