feat: intersect clinical and radiomic data, try out calc_LASSO

--- a/workflow/notebooks/0n-feature-selection.ipynb
+++ b/workflow/notebooks/0n-feature-selection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "96dabc4b",
    "metadata": {},
    "outputs": [],
@@ -11,13 +11,14 @@
     "\n",
     "import pandas as pd\n",
     "from readii.io.loaders import loadImageDatasetConfig, loadFileToDataFrame\n",
+    "from readii.process.subset import getPatientIntersectionDataframes\n",
     "from pathlib import Path\n",
     "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "f5763f29",
    "metadata": {},
    "outputs": [],
@@ -42,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "893efb13",
    "metadata": {},
    "outputs": [],
@@ -53,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "d47ef626",
    "metadata": {},
    "outputs": [],
@@ -65,34 +66,71 @@
     "# PatientID is TCIA ID\n",
     "id_map = mit_index['SampleID']\n",
     "id_map.index = mit_index[\"PatientID\"]\n",
-    "id_map.drop_duplicates(inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "10eebf2f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "id_map.drop_duplicates(inplace=True)\n",
+    "\n",
     "# Map the SampleIDs to the clinical data and add as a column for intersection\n",
-    "clinical_data['SampleID'] = clinical_data['PatientID'].map(id_map)"
+    "clinical_data['SampleID'] = clinical_data['PatientID'].map(id_map)\n",
+    "clinical_data.set_index('SampleID', inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 12,
    "id": "88aa2514",
    "metadata": {},
    "outputs": [],
    "source": [
     "image_type = \"full_original\"\n",
-    "pyrad_features = loadFileToDataFrame((RESULTS_DATA_PATH / pyradiomics_settings / f\"{image_type}_features.csv\"))"
+    "pyrad_features = loadFileToDataFrame((RESULTS_DATA_PATH / pyradiomics_settings / f\"{image_type}_features.csv\"))\n",
+    "\n",
+    "pyrad_features.rename(columns={\"ID\": \"SampleID\"}, inplace=True)\n",
+    "# Set the index to SampleID\n",
+    "pyrad_features.set_index('SampleID', inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
+   "id": "02e3fd4c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['NSCLC-Radiomics_001', 'NSCLC-Radiomics_002', 'NSCLC-Radiomics_003',\n",
+       "       'NSCLC-Radiomics_004', 'NSCLC-Radiomics_005', 'NSCLC-Radiomics_006',\n",
+       "       'NSCLC-Radiomics_007', 'NSCLC-Radiomics_008', 'NSCLC-Radiomics_009',\n",
+       "       'NSCLC-Radiomics_010',\n",
+       "       ...\n",
+       "       'NSCLC-Radiomics_413', 'NSCLC-Radiomics_414', 'NSCLC-Radiomics_415',\n",
+       "       'NSCLC-Radiomics_416', 'NSCLC-Radiomics_417', 'NSCLC-Radiomics_418',\n",
+       "       'NSCLC-Radiomics_419', 'NSCLC-Radiomics_420', 'NSCLC-Radiomics_421',\n",
+       "       'NSCLC-Radiomics_422'],\n",
+       "      dtype='object', name='SampleID', length=421)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clinical_data.index.intersection(pyrad_features.index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "a61f5158",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clinical_subset, pyrad_subset = getPatientIntersectionDataframes(clinical_data, pyrad_features, need_pat_index_A=False, need_pat_index_B=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "id": "6d04a116",
    "metadata": {},
    "outputs": [],
@@ -125,6 +163,64 @@
     " \n",
     "    return(lasso_passed)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "8f833ce8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/bhkuser1/katy/readii_2_roqc/.pixi/envs/default/lib/python3.12/site-packages/sklearn/linear_model/_coordinate_descent.py:695: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations, check the scale of the features or consider increasing regularisation. Duality gap: 2.055e+01, tolerance: 4.253e-03\n",
+      "  model = cd_fast.enet_coordinate_descent(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array(['original_shape_VoxelVolume', 'original_shape_SurfaceArea',\n",
+       "       'original_firstorder_Energy',\n",
+       "       'original_firstorder_InterquartileRange',\n",
+       "       'original_firstorder_Maximum', 'original_firstorder_Median',\n",
+       "       'original_firstorder_Minimum', 'original_firstorder_TotalEnergy',\n",
+       "       'original_firstorder_Variance', 'original_glcm_ClusterProminence',\n",
+       "       'original_glrlm_GrayLevelNonUniformity',\n",
+       "       'original_glrlm_HighGrayLevelRunEmphasis',\n",
+       "       'original_glrlm_LongRunHighGrayLevelEmphasis',\n",
+       "       'original_glrlm_RunLengthNonUniformity',\n",
+       "       'original_glszm_LargeAreaEmphasis',\n",
+       "       'original_glszm_LargeAreaHighGrayLevelEmphasis',\n",
+       "       'original_glszm_SizeZoneNonUniformity',\n",
+       "       'original_glszm_ZoneVariance',\n",
+       "       'original_gldm_DependenceNonUniformity',\n",
+       "       'original_gldm_GrayLevelNonUniformity',\n",
+       "       'original_gldm_LargeDependenceHighGrayLevelEmphasis',\n",
+       "       'original_ngtdm_Complexity'], dtype='<U50')"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from readii.process import getOnlyPyradiomicsFeatures\n",
+    "\n",
+    "feats_only = getOnlyPyradiomicsFeatures(pyrad_subset)\n",
+    "event_status_train = clinical_subset['deadstatus.event']\n",
+    "calc_LASSO(feats_only, event_status_train, 0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3002b199",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
