--- a/workflow/notebooks/0n-feature-selection.ipynb
+++ b/workflow/notebooks/0n-feature-selection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "96dabc4b",
    "metadata": {},
    "outputs": [],
@@ -12,13 +12,22 @@
     "import pandas as pd\n",
     "from readii.io.loaders import loadImageDatasetConfig, loadFileToDataFrame\n",
     "from readii.process.subset import getPatientIntersectionDataframes\n",
+    "from readii.process.label import addOutcomeLabels, eventOutcomeColumnSetup, timeOutcomeColumnSetup\n",
     "from pathlib import Path\n",
     "import numpy as np"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f41b9636",
+   "metadata": {},
+   "source": [
+    "### Set up variables from config file for the dataset"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "f5763f29",
    "metadata": {},
    "outputs": [],
@@ -28,6 +37,8 @@
     "\n",
     "# Initialize dataset parameters\n",
     "CLINICAL_DATA_FILE = config[\"CLINICAL_FILE\"]\n",
+    "OUTCOME_VARIABLES = config[\"OUTCOME_VARIABLES\"]\n",
+    "\n",
     "DATASET_NAME = config[\"DATA_SOURCE\"] + \"_\" + config[\"DATASET_NAME\"]\n",
     "\n",
     "RANDOM_SEED = 10\n",
@@ -42,23 +53,31 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "893efb13",
+   "cell_type": "markdown",
+   "id": "e07576b4",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Load clinical data file\n",
-    "clinical_data = loadFileToDataFrame((RAW_DATA_PATH / \"clinical\" / CLINICAL_DATA_FILE))"
+    "# Intersect Clinical and Feature data to get patient subset for analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ed410bac",
+   "metadata": {},
+   "source": [
+    "## Clinical data loading and processing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "d47ef626",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Load clinical data file\n",
+    "raw_clinical_data = loadFileToDataFrame((RAW_DATA_PATH / \"clinical\" / CLINICAL_DATA_FILE))\n",
+    "\n",
     "# Load the Med-ImageTools index to use for mapping TCIA IDs to local file names\n",
     "mit_index = loadFileToDataFrame((RAW_DATA_PATH / \"images\" / config[\"MIT_INDEX_FILE\"]))\n",
     "\n",
@@ -69,68 +88,95 @@
     "id_map.drop_duplicates(inplace=True)\n",
     "\n",
     "# Map the SampleIDs to the clinical data and add as a column for intersection\n",
-    "clinical_data['SampleID'] = clinical_data['PatientID'].map(id_map)\n",
-    "clinical_data.set_index('SampleID', inplace=True)"
+    "raw_clinical_data['SampleID'] = raw_clinical_data['PatientID'].map(id_map)\n",
+    "raw_clinical_data.set_index('SampleID', inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b7928fbb",
+   "metadata": {},
+   "source": [
+    "## Feature data loading and processing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "88aa2514",
    "metadata": {},
    "outputs": [],
    "source": [
     "image_type = \"full_original\"\n",
-    "pyrad_features = loadFileToDataFrame((RESULTS_DATA_PATH / pyradiomics_settings / f\"{image_type}_features.csv\"))\n",
+    "raw_feature_data = loadFileToDataFrame((RESULTS_DATA_PATH / pyradiomics_settings / f\"{image_type}_features.csv\"))\n",
     "\n",
-    "pyrad_features.rename(columns={\"ID\": \"SampleID\"}, inplace=True)\n",
+    "raw_feature_data.rename(columns={\"ID\": \"SampleID\"}, inplace=True)\n",
     "# Set the index to SampleID\n",
-    "pyrad_features.set_index('SampleID', inplace=True)"
+    "raw_feature_data.set_index('SampleID', inplace=True)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "02e3fd4c",
+   "cell_type": "markdown",
+   "id": "e250bef7",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['NSCLC-Radiomics_001', 'NSCLC-Radiomics_002', 'NSCLC-Radiomics_003',\n",
-       "       'NSCLC-Radiomics_004', 'NSCLC-Radiomics_005', 'NSCLC-Radiomics_006',\n",
-       "       'NSCLC-Radiomics_007', 'NSCLC-Radiomics_008', 'NSCLC-Radiomics_009',\n",
-       "       'NSCLC-Radiomics_010',\n",
-       "       ...\n",
-       "       'NSCLC-Radiomics_413', 'NSCLC-Radiomics_414', 'NSCLC-Radiomics_415',\n",
-       "       'NSCLC-Radiomics_416', 'NSCLC-Radiomics_417', 'NSCLC-Radiomics_418',\n",
-       "       'NSCLC-Radiomics_419', 'NSCLC-Radiomics_420', 'NSCLC-Radiomics_421',\n",
-       "       'NSCLC-Radiomics_422'],\n",
-       "      dtype='object', name='SampleID', length=421)"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "clinical_data.index.intersection(pyrad_features.index)"
+    "## Intersect clinical and feature data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "id": "a61f5158",
    "metadata": {},
    "outputs": [],
    "source": [
-    "clinical_subset, pyrad_subset = getPatientIntersectionDataframes(clinical_data, pyrad_features, need_pat_index_A=False, need_pat_index_B=False)"
+    "clinical_data, pyrad_subset = getPatientIntersectionDataframes(raw_clinical_data, raw_feature_data, need_pat_index_A=False, need_pat_index_B=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0730d954",
+   "metadata": {},
+   "source": [
+    "# Set up outcome columns in clinical data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
+   "id": "9db851bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clinical_data = eventOutcomeColumnSetup(dataframe_with_outcome=clinical_data,\n",
+    "                                        outcome_column_label=OUTCOME_VARIABLES[\"event_label\"],\n",
+    "                                        standard_column_label=\"survival_event_binary\",\n",
+    "                                        )\n",
+    "clinical_data = timeOutcomeColumnSetup(dataframe_with_outcome=clinical_data,\n",
+    "                                       outcome_column_label=OUTCOME_VARIABLES[\"time_label\"],\n",
+    "                                       standard_column_label=\"survival_time_years\",\n",
+    "                                       convert_to_years=OUTCOME_VARIABLES[\"convert_to_years\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dfee0cf8",
+   "metadata": {},
+   "source": [
+    "# Feature Selection"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c33735be",
+   "metadata": {},
+   "source": [
+    "## LASSO feature selection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "6d04a116",
    "metadata": {},
    "outputs": [],
@@ -166,46 +212,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "8f833ce8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/bhkuser1/katy/readii_2_roqc/.pixi/envs/default/lib/python3.12/site-packages/sklearn/linear_model/_coordinate_descent.py:695: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations, check the scale of the features or consider increasing regularisation. Duality gap: 2.055e+01, tolerance: 4.253e-03\n",
-      "  model = cd_fast.enet_coordinate_descent(\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array(['original_shape_VoxelVolume', 'original_shape_SurfaceArea',\n",
-       "       'original_firstorder_Energy',\n",
-       "       'original_firstorder_InterquartileRange',\n",
-       "       'original_firstorder_Maximum', 'original_firstorder_Median',\n",
-       "       'original_firstorder_Minimum', 'original_firstorder_TotalEnergy',\n",
-       "       'original_firstorder_Variance', 'original_glcm_ClusterProminence',\n",
-       "       'original_glrlm_GrayLevelNonUniformity',\n",
-       "       'original_glrlm_HighGrayLevelRunEmphasis',\n",
-       "       'original_glrlm_LongRunHighGrayLevelEmphasis',\n",
-       "       'original_glrlm_RunLengthNonUniformity',\n",
-       "       'original_glszm_LargeAreaEmphasis',\n",
-       "       'original_glszm_LargeAreaHighGrayLevelEmphasis',\n",
-       "       'original_glszm_SizeZoneNonUniformity',\n",
-       "       'original_glszm_ZoneVariance',\n",
-       "       'original_gldm_DependenceNonUniformity',\n",
-       "       'original_gldm_GrayLevelNonUniformity',\n",
-       "       'original_gldm_LargeDependenceHighGrayLevelEmphasis',\n",
-       "       'original_ngtdm_Complexity'], dtype='<U50')"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from readii.process import getOnlyPyradiomicsFeatures\n",
     "\n",
@@ -239,7 +249,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.3"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
