--- a/sandbox/combine_feature_sets.ipynb
+++ b/sandbox/combine_feature_sets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "a75329b2",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "b7a3759c",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "b37a677e",
    "metadata": {},
    "outputs": [],
@@ -74,13 +74,26 @@
     "            if len(combined_features) != len(features):\n",
     "                raise ValueError(f\"Patient count mismatch between {combined_features} and {features}\")\n",
     "\n",
+    "            additional_features = ['ID'] + list(features.columns.difference(combined_features.columns))\n",
+    "            \n",
     "            # Merge the features\n",
-    "            combined_features = pd.merge(combined_features, features, how=\"left\")\n",
+    "            combined_features = pd.merge(combined_features, features[additional_features], how=\"inner\", on=\"ID\")\n",
     "    \n",
+    "\n",
     "    # save out the combined features\n",
     "    combined_features_path = RESULTS_DATA_PATH / combined_feature_set_name / f\"{image_type}_features.csv\"\n",
     "    combined_features_path.parent.mkdir(parents=True, exist_ok=True)\n",
     "    combined_features.to_csv(combined_features_path, index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "97c5d456",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "combined_features"
    ]
   }
  ],
