feat: add radiomic signature loading and selection from feature data

--- a/workflow/notebooks/0n-feature-selection.ipynb
+++ b/workflow/notebooks/0n-feature-selection.ipynb
@@ -14,7 +14,8 @@
     "from readii.process.subset import getPatientIntersectionDataframes\n",
     "from readii.process.label import addOutcomeLabels, eventOutcomeColumnSetup, timeOutcomeColumnSetup\n",
     "from pathlib import Path\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import yaml"
    ]
   },
   {
@@ -27,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "f5763f29",
    "metadata": {},
    "outputs": [],
@@ -49,7 +50,7 @@
     "PROC_DATA_PATH = DATA_DIR_PATH / \"procdata\" / DATASET_NAME\n",
     "RESULTS_DATA_PATH = DATA_DIR_PATH / \"results\" / DATASET_NAME\n",
     "\n",
-    "pyradiomics_settings = \"pyradiomics_original_all_features\""
+    "pyradiomics_settings = \"pyradiomics_original_plus_aerts\""
    ]
   },
   {
@@ -102,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "88aa2514",
    "metadata": {},
    "outputs": [],
@@ -143,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "9db851bd",
    "metadata": {},
    "outputs": [],
@@ -164,6 +165,61 @@
    "metadata": {},
    "source": [
     "# Feature Selection"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15770a59",
+   "metadata": {},
+   "source": [
+    "## Existing signature"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "124fc5b6",
+   "metadata": {},
+   "source": [
+    "### Load signature from yaml file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "38b4d8ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Path to the yaml file in the rawdata directory\n",
+    "radiomic_signature_yaml = RAW_DATA_PATH.parent / \"cph_weights_radiomic_signature\" / \"aerts_original.yaml\"\n",
+    "\n",
+    "try:\n",
+    "    with open(radiomic_signature_yaml, 'r') as f:\n",
+    "        yaml_data = yaml.safe_load(f)\n",
+    "        if not isinstance(yaml_data, dict):\n",
+    "            raise TypeError(\"ROI match YAML must contain a dictionary\")\n",
+    "        radiomic_signature = pd.Series(yaml_data['signature'])\n",
+    "except Exception as e:\n",
+    "    print(f\"Error loading YAML file: {e}\")\n",
+    "    raise"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3298eaf3",
+   "metadata": {},
+   "source": [
+    "### Get just features in radiomic signature"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "a303fc54",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "signature_feature_data = raw_feature_data[radiomic_signature.index]"
    ]
   },
   {
@@ -220,17 +276,33 @@
     "from readii.process import getOnlyPyradiomicsFeatures\n",
     "\n",
     "feats_only = getOnlyPyradiomicsFeatures(pyrad_subset)\n",
-    "event_status_train = clinical_subset['deadstatus.event']\n",
+    "event_status_train = clinical_data['survival_event_binary']\n",
     "calc_LASSO(feats_only, event_status_train, 0.5)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3002b199",
+   "cell_type": "markdown",
+   "id": "c0fe030e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Prediction Modelling"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a9b2531d",
+   "metadata": {},
+   "source": [
+    "## With existing signature weights"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "77a17239",
+   "metadata": {},
+   "source": [
+    "feature_hazards = "
+   ]
   }
  ],
  "metadata": {
