feat: add concordance index calculations and bootstrapping

--- a/workflow/notebooks/0n-feature-selection.ipynb
+++ b/workflow/notebooks/0n-feature-selection.ipynb
@@ -8,6 +8,7 @@
    "outputs": [],
    "source": [
     "from sklearn.linear_model import Lasso \n",
+    "from sksurv.metrics import concordance_index_censored\n",
     "\n",
     "import pandas as pd\n",
     "from readii.io.loaders import loadImageDatasetConfig, loadFileToDataFrame\n",
@@ -28,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 41,
    "id": "f5763f29",
    "metadata": {},
    "outputs": [],
@@ -50,7 +51,10 @@
     "PROC_DATA_PATH = DATA_DIR_PATH / \"procdata\" / DATASET_NAME\n",
     "RESULTS_DATA_PATH = DATA_DIR_PATH / \"results\" / DATASET_NAME\n",
     "\n",
-    "pyradiomics_settings = \"pyradiomics_original_plus_aerts\""
+    "pyradiomics_settings = \"pyradiomics_original_plus_aerts\"\n",
+    "\n",
+    "signature_dir = PROC_DATA_PATH / \"signature_data\"\n",
+    "signature_dir.mkdir(parents=True, exist_ok=True)"
    ]
   },
   {
@@ -103,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "88aa2514",
    "metadata": {},
    "outputs": [],
@@ -126,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "a61f5158",
    "metadata": {},
    "outputs": [],
@@ -185,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "38b4d8ba",
    "metadata": {},
    "outputs": [],
@@ -214,12 +218,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "a303fc54",
    "metadata": {},
    "outputs": [],
    "source": [
     "signature_feature_data = raw_feature_data[radiomic_signature.index]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0ba523fa",
+   "metadata": {},
+   "source": [
+    "### Add outcome columns, and save out for R processing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "077e9e14",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "signature_plus_outcomes = pd.concat([clinical_data[['survival_event_binary', 'survival_time_years']], signature_feature_data], axis=1)\n",
+    "\n",
+    "signature_plus_outcomes.to_csv(signature_dir / \"aerts_original.csv\", index=True)"
    ]
   },
   {
@@ -297,12 +321,100 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "77a17239",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "feature_hazards = "
+    "feature_hazards = signature_feature_data.dot(radiomic_signature)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "de30b925",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cindex, concordant, discordant, _tied_risk, _tied_time = concordance_index_censored(\n",
+    "    event_indicator = clinical_data['survival_event_binary'].astype(bool),\n",
+    "    event_time = clinical_data['survival_time_years'],\n",
+    "    estimate = feature_hazards,\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f58ad793",
+   "metadata": {},
+   "source": [
+    "### Bootstrap to get confidence intervals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "e0d1570d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sampled_cindex_bootstrap = []\n",
+    "\n",
+    "hazards_and_outcomes = pd.DataFrame({\n",
+    "    'hazards': feature_hazards,\n",
+    "    'survival_event_binary': clinical_data['survival_event_binary'],\n",
+    "    'survival_time_years': clinical_data['survival_time_years']\n",
+    "}, index=clinical_data.index)\n",
+    "\n",
+    "bootstrap_count = 1000\n",
+    "\n",
+    "for idx in range(bootstrap_count):\n",
+    "    sampled_results = hazards_and_outcomes.sample(n=hazards_and_outcomes.shape[0], replace=True)\n",
+    "\n",
+    "    sampled_cindex, _concordant, _discordant, _tied_risk, _tied_time = concordance_index_censored(\n",
+    "        event_indicator = sampled_results['survival_event_binary'].astype(bool),\n",
+    "        event_time = sampled_results['survival_time_years'],\n",
+    "        estimate = sampled_results['hazards'],\n",
+    "        )\n",
+    "    \n",
+    "    sampled_cindex_bootstrap.append(sampled_cindex)\n",
+    "\n",
+    "lower_confidence_interval = sorted(sampled_cindex_bootstrap)[bootstrap_count // 4 - 1]\n",
+    "upper_confidence_interval = sorted(sampled_cindex_bootstrap)[bootstrap_count - (bootstrap_count // 4)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "4909373f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Results\n",
+      "C-index:  0.578848989353674\n",
+      "Lower confidence interval:  0.5689332068574602\n",
+      "Upper confidence interval:  0.5900537792579168\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Results\")\n",
+    "print(\"C-index: \", cindex)\n",
+    "print(\"Lower confidence interval: \", lower_confidence_interval)\n",
+    "print(\"Upper confidence interval: \", upper_confidence_interval)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1addf79",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
