refactor: change output signature file name, select features from radiomic subset

--- a/workflow/notebooks/0n-feature-selection.ipynb
+++ b/workflow/notebooks/0n-feature-selection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 35,
    "id": "96dabc4b",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,8 @@
     "import pandas as pd\n",
     "from readii.io.loaders import loadImageDatasetConfig, loadFileToDataFrame\n",
     "from readii.process.subset import getPatientIntersectionDataframes\n",
-    "from readii.process.label import addOutcomeLabels, eventOutcomeColumnSetup, timeOutcomeColumnSetup\n",
+    "from readii.process.label import addOutcomeLabels, eventOutcomeColumnSetup, timeOutcomeColumnSetup, getPatientIdentifierLabel\n",
+    "from readii.process.split import splitDataByColumnValue\n",
     "from pathlib import Path\n",
     "import numpy as np\n",
     "import yaml"
@@ -29,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "f5763f29",
    "metadata": {},
    "outputs": [],
@@ -51,9 +52,12 @@
     "PROC_DATA_PATH = DATA_DIR_PATH / \"procdata\" / DATASET_NAME\n",
     "RESULTS_DATA_PATH = DATA_DIR_PATH / \"results\" / DATASET_NAME\n",
     "\n",
+    "# train test split settings\n",
+    "TRAIN_TEST_SPLIT = config[\"TRAIN_TEST_SPLIT\"]\n",
+    "\n",
     "pyradiomics_settings = \"pyradiomics_original_plus_aerts\"\n",
     "\n",
-    "signature_dir = PROC_DATA_PATH / \"signature_data\"\n",
+    "signature_dir = PROC_DATA_PATH / \"signature_data\" / \"aerts_original\"\n",
     "signature_dir.mkdir(parents=True, exist_ok=True)"
    ]
   },
@@ -75,16 +79,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "d47ef626",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load clinical data file\n",
     "raw_clinical_data = loadFileToDataFrame((RAW_DATA_PATH / \"clinical\" / CLINICAL_DATA_FILE))\n",
+    "clinical_pat_id = getPatientIdentifierLabel(raw_clinical_data)\n",
+    "\n",
+    "if TRAIN_TEST_SPLIT['split']:\n",
+    "    split_data = splitDataByColumnValue(raw_clinical_data,\n",
+    "                                        split_col_data=TRAIN_TEST_SPLIT['split_variable'],\n",
+    "                                        impute_value=TRAIN_TEST_SPLIT['impute'])\n",
+    "    # TODO: don't default to test string\n",
+    "    clinical_data = split_data['test']\n",
     "\n",
     "# Load the Med-ImageTools index to use for mapping TCIA IDs to local file names\n",
     "mit_index = loadFileToDataFrame((RAW_DATA_PATH / \"images\" / config[\"MIT_INDEX_FILE\"]))\n",
+    "\n",
+    "if 'SampleID' not in mit_index.columns:\n",
+    "    mit_index['SampleID'] = config[\"DATASET_NAME\"] + \"_\" + mit_index['SampleNumber'].astype(str).str.zfill(3)\n",
     "\n",
     "# SampleID is local file name\n",
     "# PatientID is TCIA ID\n",
@@ -93,7 +108,7 @@
     "id_map.drop_duplicates(inplace=True)\n",
     "\n",
     "# Map the SampleIDs to the clinical data and add as a column for intersection\n",
-    "raw_clinical_data['SampleID'] = raw_clinical_data['PatientID'].map(id_map)\n",
+    "raw_clinical_data['SampleID'] = raw_clinical_data[clinical_pat_id].map(id_map)\n",
     "raw_clinical_data.set_index('SampleID', inplace=True)"
    ]
   },
@@ -107,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "id": "88aa2514",
    "metadata": {},
    "outputs": [],
@@ -130,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "id": "a61f5158",
    "metadata": {},
    "outputs": [],
@@ -148,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "id": "9db851bd",
    "metadata": {},
    "outputs": [],
@@ -189,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "id": "38b4d8ba",
    "metadata": {},
    "outputs": [],
@@ -218,12 +233,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "id": "a303fc54",
    "metadata": {},
    "outputs": [],
    "source": [
-    "signature_feature_data = raw_feature_data[radiomic_signature.index]"
+    "signature_feature_data = pyrad_subset[radiomic_signature.index]"
    ]
   },
   {
@@ -236,14 +251,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 11,
    "id": "077e9e14",
    "metadata": {},
    "outputs": [],
    "source": [
     "signature_plus_outcomes = pd.concat([clinical_data[['survival_event_binary', 'survival_time_years']], signature_feature_data], axis=1)\n",
     "\n",
-    "signature_plus_outcomes.to_csv(signature_dir / \"aerts_original.csv\", index=True)"
+    "\n",
+    "signature_plus_outcomes.to_csv(signature_dir / f\"{image_type}.csv\", index=True)"
    ]
   },
   {
@@ -322,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "id": "77a17239",
    "metadata": {},
    "outputs": [],
@@ -332,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 31,
    "id": "de30b925",
    "metadata": {},
    "outputs": [],
@@ -354,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 32,
    "id": "e0d1570d",
    "metadata": {},
    "outputs": [],
@@ -386,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 33,
    "id": "4909373f",
    "metadata": {},
    "outputs": [
@@ -395,9 +411,9 @@
      "output_type": "stream",
      "text": [
       "Results\n",
-      "C-index:  0.578848989353674\n",
-      "Lower confidence interval:  0.5689332068574602\n",
-      "Upper confidence interval:  0.5900537792579168\n"
+      "C-index:  0.4914219249781913\n",
+      "Lower confidence interval:  0.4663610823598994\n",
+      "Upper confidence interval:  0.5148074267300905\n"
      ]
     }
    ],
