--- a/sandbox/combine_feature_sets.ipynb
+++ b/sandbox/combine_feature_sets.ipynb
@@ -2,26 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "a75329b2",
    "metadata": {},
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
     "import pandas as pd\n",
-    "\n",
-    "from readii.io.loaders import loadImageDatasetConfig"
+    "import yaml"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "b7a3759c",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load in the configuration file\n",
-    "config = loadImageDatasetConfig(\"NSCLC-Radiomics\", Path(\"../config/datasets\"))\n",
+    "config_file_path = Path(\"../config/datasets/HEAD-NECK-RADIOMICS-HN1.yaml\")\n",
+    "with config_file_path.open(\"r\") as f:\n",
+    "    config = yaml.safe_load(f)\n",
     "\n",
     "RESULTS_DATA_PATH = Path(\"../data/results/\")\n",
     "\n",
@@ -38,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "b37a677e",
    "metadata": {},
    "outputs": [],
@@ -110,7 +111,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.3"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
