feat: configuration loading working

--- a/workflow/notebooks/run_analysis.ipynb
+++ b/workflow/notebooks/run_analysis.ipynb
@@ -64,20 +64,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "called match pattern must be a class",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 5\u001b[39m\n\u001b[32m      2\u001b[39m dataset_config = loadImageDatasetConfig(\u001b[33m\"\u001b[39m\u001b[33mNSCLC-Radiomics_test\u001b[39m\u001b[33m\"\u001b[39m, dirs.CONFIG / \u001b[33m\"\u001b[39m\u001b[33mdatasets\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m      4\u001b[39m DATASET_NAME = dataset_config[\u001b[33m'\u001b[39m\u001b[33mDATASET_NAME\u001b[39m\u001b[33m'\u001b[39m]\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m full_data_name = \u001b[43mget_full_data_name\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdirs\u001b[49m\u001b[43m.\u001b[49m\u001b[43mCONFIG\u001b[49m\u001b[43m \u001b[49m\u001b[43m/\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mdatasets\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m \u001b[49m\u001b[43m/\u001b[49m\u001b[43m \u001b[49m\u001b[43mdataset\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      7\u001b[39m readii_config = dataset_config[\u001b[33m'\u001b[39m\u001b[33mREADII\u001b[39m\u001b[33m'\u001b[39m]\n\u001b[32m      9\u001b[39m regions = readii_config[\u001b[33m'\u001b[39m\u001b[33mIMAGE_TYPES\u001b[39m\u001b[33m'\u001b[39m][\u001b[33m'\u001b[39m\u001b[33mregions\u001b[39m\u001b[33m'\u001b[39m]\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/katy/readii_2_roqc/.pixi/envs/default/lib/python3.12/site-packages/readii/process/config/dataset_config.py:13\u001b[39m, in \u001b[36mget_full_data_name\u001b[39m\u001b[34m(config)\u001b[39m\n\u001b[32m     11\u001b[39m \u001b[38;5;28;01mcase\u001b[39;00m Path():\n\u001b[32m     12\u001b[39m     dataset_config = loadImageDatasetConfig(config.stem, config.parent)\n\u001b[32m---> \u001b[39m\u001b[32m13\u001b[39m \u001b[38;5;28;01mcase\u001b[39;00m Dict():\n\u001b[32m     14\u001b[39m     dataset_config = config\n\u001b[32m     15\u001b[39m \u001b[38;5;28;01mcase\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01m_\u001b[39;00m:\n",
-      "\u001b[31mTypeError\u001b[39m: called match pattern must be a class"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dataset = \"NSCLC-Radiomics_test\"\n",
     "dataset_config = loadImageDatasetConfig(\"NSCLC-Radiomics_test\", dirs.CONFIG / \"datasets\")\n",
@@ -101,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,8 +100,7 @@
     "corr_figures_path = dirs.RESULTS / full_data_name / \"correlation_figures\" / feature_type / settings_name\n",
     "\n",
     "# Set features input directory\n",
-    "features_dir = dirs.RESULTS / full_data_name / settings_name\n",
-    "\n"
+    "features_dir = dirs.RESULTS / full_data_name / settings_name\n"
    ]
   },
   {
