refactor: switching out parallel and sequential run, remove unused readii_sample_id

--- a/sandbox/image_type_indexing.ipynb
+++ b/sandbox/image_type_indexing.ipynb
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "3fbed991",
    "metadata": {},
    "outputs": [],
@@ -230,7 +230,7 @@
     "    all_mask_metadata = study_data[study_data['Modality'] == mask_modality]\n",
     "\n",
     "    for row_idx, mask_metadata in all_mask_metadata.iterrows():\n",
-    "        readii_sample_id = f\"{mask_metadata['PatientID']}_{mask_metadata['ImageID']}\"\n",
+    "\n",
     "\n",
     "        mask_path = mit_images_dir_path / Path(mask_metadata['filepath'])\n",
     "        # Load in mask\n",
@@ -239,28 +239,28 @@
     "\n",
     "        mask_roi_name = mask_metadata['ImageID']\n",
     "        \n",
-    "        # readii_image_metadata = [save_out_negative_controls(nifti_writer, \n",
-    "        #                                                     patient_id = image_metadata['PatientID'],\n",
-    "        #                                                     image = neg_image,\n",
-    "        #                                                     mask_roi_name = mask_roi_name,\n",
-    "        #                                                     region = region,\n",
-    "        #                                                     permutation = permutation,\n",
-    "        #                                                     orig_image_dirs = image_path.parent\n",
-    "        #                         ) for neg_image, permutation, region in manager.apply(image, mask)\n",
-    "        # ]\n",
+    "        readii_image_metadata = [save_out_negative_controls(nifti_writer, \n",
+    "                                                            patient_id = image_metadata['PatientID'],\n",
+    "                                                            image = neg_image,\n",
+    "                                                            mask_roi_name = mask_roi_name,\n",
+    "                                                            region = region,\n",
+    "                                                            permutation = permutation,\n",
+    "                                                            orig_image_dirs = image_path.parent\n",
+    "                                ) for neg_image, permutation, region in manager.apply(image, mask)\n",
+    "        ]\n",
     "\n",
     "        # Generate each image type and save it out with the nifti writer\n",
-    "        readii_image_metadata = Parallel(n_jobs=-1, require=\"sharedmem\")(\n",
-    "                    delayed(save_out_negative_controls)(\n",
-    "                        nifti_writer, \n",
-    "                        patient_id = image_metadata['PatientID'],\n",
-    "                        image = neg_image,\n",
-    "                        mask_roi_name = mask_roi_name,\n",
-    "                        region = region,\n",
-    "                        permutation = permutation,\n",
-    "                        orig_image_dirs = image_path.parent\n",
-    "                    ) for neg_image, permutation, region in manager.apply(image, mask)\n",
-    "        )    "
+    "        # readii_image_metadata = Parallel(n_jobs=-1, require=\"sharedmem\")(\n",
+    "        #             delayed(save_out_negative_controls)(\n",
+    "        #                 nifti_writer, \n",
+    "        #                 patient_id = image_metadata['PatientID'],\n",
+    "        #                 image = neg_image,\n",
+    "        #                 mask_roi_name = mask_roi_name,\n",
+    "        #                 region = region,\n",
+    "        #                 permutation = permutation,\n",
+    "        #                 orig_image_dirs = image_path.parent\n",
+    "        #             ) for neg_image, permutation, region in manager.apply(image, mask)\n",
+    "        # )    "
    ]
   },
   {
